# FreeImage_static_cmk_inst

./: .gitignore  CMakeLists.txt  README.md
FreeImage_0.1.1_QT_5_12_12__MSVC_19.0.24215.1_MSVC_19.0.24215.1___CXX_98_AMD64_x64_install/lib/cmake/FreeImage/: FreeImageTargets-release.cmake  FreeImageTargets.cmake
FreeImage_19.0.24215.1_install/lib/cmake/FreeImage/: FreeImageTargets-debug.cmake
FreeImage_full_static_CmkInstall/: CMakeLists.txt
install_FreeImage_Ubun2104/lib/cmake/FreeImage/: FreeImageTargets-debug.cmake
install_FreeImage_VC14/lib/cmake/FreeImage/: FreeImageConfig.cmake  FreeImageConfigVersion.cmake  FreeImageTargets-release.cmake
samples/: CMakeLists.txt
src/: CMakeLists.txt
